--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,11 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body{
+html,
+body {
   height: 100vh;
   width: 100vw;
 }
 
-body{
-  font-family: Poppins,sans-serif;
+body {
+  font-family: Poppins, sans-serif;
 }
