--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,3 +22,25 @@ body {
     transform: rotate(360deg);
   }
 }
+
+@themes {
+  --animate-bubble: bubble 5s linear 0.1s forwards infinite;
+
+  @keyframes bubble {
+    0% {
+      border-radius: 80% 50% 60% 50%;
+    }
+    25% {
+      border-radius: 50% 80% 50% 60%;
+    }
+    50% {
+      border-radius: 60% 50% 80% 50%;
+    }
+    75% {
+      border-radius: 50% 60% 50% 80%;
+    }
+    100% {
+      border-radius: 80% 50% 60% 50%;
+    }
+  }
+}
